Criada Layout da tela de Inserção de Tarefas
Criado o layout da tela responsável pela inserção de novas tarefas seguindo o padrão do app - ainda sem operação

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">DIO To do List</string>
     <string name="tv_tarefas">Tarefas</string>
+    <string name="mt_criar_tarefa">Criar Tarefa</string>
+    <string name="til_hint_titulo">Título</string>
+    <string name="til_hint_descricao">Descrição</string>
+    <string name="btn_cancelar">Cancelar</string>
+    <string name="btn_criar_tarefa">Criar Tarefa</string>
 </resources>
