--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">DIO To do List</string>
     <string name="tv_tarefas">Tarefas</string>
-    <string name="mt_criar_tarefa">Criar Tarefa</string>
-    <string name="til_hint_titulo">Título</string>
-    <string name="til_hint_descricao">Descrição</string>
-    <string name="btn_cancelar">Cancelar</string>
+    <string name="label_new_task">Criar Tarefa</string>
+    <string name="label_title">Título</string>
+    <string name="label_description">Descrição</string>
+    <string name="label_cancel">Cancelar</string>
     <string name="btn_criar_tarefa">Criar Tarefa</string>
+    <string name="label_date">Data</string>
+    <string name="label_hour">Hora</string>
 </resources>
