--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DIO To do List</string>
-    <string name="tv_tarefas">Tarefas</string>
+    <string name="label_tasks">Tarefas</string>
     <string name="label_new_task">Criar Tarefa</string>
     <string name="label_title">Título</string>
     <string name="label_description">Descrição</string>
@@ -8,4 +8,5 @@
     <string name="btn_criar_tarefa">Criar Tarefa</string>
     <string name="label_date">Data</string>
     <string name="label_hour">Hora</string>
+    <string name="label_description_new_task">Nova Tarefa</string>
 </resources>
