--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="label_description_new_task">Nova Tarefa</string>
     <string name="label_edit">Editar</string>
     <string name="label_delete">Excluir</string>
+    <string name="label_you_dont_have_tasks">Ops! Você não possui\n nenhuma tarefa</string>
 </resources>
